<resources>
    <string name="app_name">Cash Register</string>
    <string name="product_type">Product Type</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="buy">BUY</string>
    <string name="manager">MANAGER</string>
    <string name="ItemName">Item Name</string>
    <string name="ItemPrice">Item Price</string>
    <string name="ItemQuantity">Item Quantity</string>
    <string name="history">HISTORY</string>
    <string name="reset">RESTOCK</string>
    <string name="enterQty">Enter New Quantity</string>
    <string name="OK">OK</string>
    <string name="Cancel">CANCEL</string>
    <string name="managerPanel">Manager Panel</string>
    <string name="historyList">History Of Purchase</string>
    <string name="detail">Detailed Purchase</string>
    <string name="restock">Restock</string>
</resources>