<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/itemName_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize"
        android:textColor="@color/black"
        android:hint="@string/ItemName"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/itemQuantity_row"
        app:layout_constraintBottom_toTopOf="@id/itemPrice_row"/>
    <TextView
        android:id="@+id/itemQuantity_row"
        android:hint="@string/ItemQuantity"
        android:textSize="@dimen/textSize"
        android:textColor="@color/Battleship_Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/itemQuantity_row"
        app:layout_constraintStart_toEndOf="@id/itemName_row"/>
    
    <TextView
        android:id="@+id/itemPrice_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ItemPrice"
        android:layout_marginStart="@dimen/listView_marginLeft"
        android:textSize="@dimen/textSize"
        android:textColor="@color/Battleship_Gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemName_row"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>